--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 									<!-- Remove this div if you don't have account on Kaggle -->
 									<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
-										<a href="#" target="_blank"> <!-- Add your link -->
+										<a href="https://www.kaggle.com/roshrr10" target="_blank"> <!-- Add your link -->
 											<div class="services color-3">
 												<span class="icon2">
 													<i class="fab fa-kaggle"></i>
@@ -199,7 +199,7 @@
 									<div class="desc">
 										<!-- Edit content for your specialization -->
 										<h3>Data Science</h3>
-										<p>Machine Learning | NLP | Deep Learning</p>
+										<p>Machine Learning | NLP | Deep Learning | </p>
 									</div>
 								</div>
 							</div>
@@ -707,7 +707,7 @@
 									</div>
 									<div class="colorlib-text">
 										<!-- Edit your mail id -->
-										<p><a href="#">riyabansilal@gmail.com</a></p>
+										<p><a href="#">roshanraju7654@gmail.com</a></p>
 									</div>
 								</div>
 
@@ -721,7 +721,7 @@
 										<div class="addresses">
 											<p class="address-divider">Christ [Deemed to be University], HMT Layout, Nagasandara Post
 												Bangalore - 560073</p>
-											<p>Ramnagar, Surat, Gujarat - 365005</p>
+											<p>Trivandrum, Kerala - 695526</p>
 										</div>
 									</div>
 								</div>
@@ -733,7 +733,7 @@
 										<i class="icon-phone"></i>
 									</div>
 									<div class="colorlib-text">
-										<p><a href="tel: 8553441091">+91 8819809250</a></p>
+										<p><a href="tel: 9818765428">+91 9818765428</a></p>
 									</div>
 								</div>
 
