--- a/index.html
+++ b/index.html
@@ -396,23 +396,14 @@
 													<h4 class="panel-title">
 														<a class="collapsed" data-toggle="collapse"
 															data-parent="#accordion" href="#collapseTwo"
-															aria-expanded="false" aria-controls="collapseTwo">Bachelors
-															Degree in Computer Applications in Data Science
+															aria-expanded="false" aria-controls="collapseTwo">MSc Data Science
 														</a>
 													</h4>
 												</div>
 												<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel"
 													aria-labelledby="headingTwo">
 													<div class="panel-body">
-														<p>Currently pursuing my V SEMESTER BCA at <strong>St. Claret
-																college, Bangalore</strong></p>
-														<ul>
-															<li>SEMESTER I 8.38 SGPA</li>
-															<li>SEMESTER II 8.22 SGPA </li>
-															<li>SEMESTER III 8.06 SGPA </li>
-
-															<li>SEMESTER IV 8.61 SGPA </li>
-														</ul>
+														<p>Currently pursuing my V Trimester MDS at <strong>Christ University, Bangalore</strong></p>
 													</div>
 												</div>
 											</div>
@@ -422,20 +413,16 @@
 													<h4 class="panel-title">
 														<a class="collapsed" data-toggle="collapse"
 															data-parent="#accordion" href="#collapseThree"
-															aria-expanded="false" aria-controls="collapseThree">Diploma
-															in Basic network and hardware engeneering
+															aria-expanded="false" aria-controls="collapseThree">Bachelor of Science (B.Sc.) in Computer Science, Mathematics, and Data Science
+Christ Academy Institute for Advanced Studies (CAIAS) | Year: 2020-2023
 														</a>
 													</h4>
 												</div>
 												<div id="collapseThree" class="panel-collapse collapse" role="tabpanel"
 													aria-labelledby="headingThree">
 													<div class="panel-body">
-														<p>An Add-on skill that I'av learnt from
-															<strong>JetKing</strong>, during the course I had hands on
-															experience in assembling computers , basic networking,
-															worked with CISCO packet tracer and VMware virtual machine ,
-															experienced the unix operating system and some basic
-															computer trouble shooting techniques.
+														<p><ul>Completed a comprehensive triple-major program with an emphasis on foundational and advanced topics in Computer Science, Mathematics, and Data Science.
+															Gained interdisciplinary skills, combining analytical problem-solving with programming expertise and statistical modeling.</ul>
 														</p>
 													</div>
 												</div>
