--- a/index.html
+++ b/index.html
@@ -107,15 +107,11 @@
 											<h2 class="colorlib-heading">About Me</h2>
 											<!-- Change content of paragraph tag -->
 											<p>
-												<font size="3.5"><strong>I'm ROSHAN RAJU  </strong>, a data
-													enthusiast residing in Bangalore, India. I thoroughly enjoy
-													engaging in problem-solving and hands-on projects. After completing
-													my Graduation in Computer Applications, I have
-													now set out on a new path as a Post-graduate Data Science student at
-													CHRIST [Deemed to be University]. This educational journey
-													allows me to delve deeper into the ever-evolving field of Data
-													Science, nurturing and expanding my expertise
-													in this dynamic domain.</font>
+												<font size="3.5"><strong>I am Roshan Raju<strong>, a passionate data enthusiast based in Bangalore, India, dedicated to unraveling complex challenges through innovative problem-solving and hands-on projects.
+												I hold a Bachelor of Science in Computer Science, Mathematics, and Statistics from Christ Academy Institute for Advanced Studies.
+												Currently, I am pursuing my Master of Science in Data Science at Christ University, where I am engaged in a comprehensive trimester-based program.
+												This advanced education enables me to deepen my expertise in data analysis, machine learning, and statistical modeling, preparing me to address complex challenges in the rapidly evolving field of Data Science.
+												I am committed to leveraging my skills and knowledge to contribute to data-driven decision-making and innovative solutions.</font>
 											</p>
 											<font size="2.8">Beliving that with a simple inference great changes can be
 												bought, making the world a better place to live in ! </font>
