--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
 												This advanced education enables me to deepen my expertise in data analysis, machine learning, and statistical modeling, preparing me to address complex challenges in the rapidly evolving field of Data Science.
 												I am committed to leveraging my skills and knowledge to contribute to data-driven decision-making and innovative solutions.</font>
 											</p>
-											<font size="2.8">Beliving that with a simple inference great changes can be
-												bought, making the world a better place to live in ! </font>
+											<font size="2.8">Passionate about turning insights into impact, I believe that even the smallest ideas can drive powerful, positive change in the world! </font>
 											<p>&nbsp;<br>&nbsp;</p>
 
 										</div>
@@ -195,7 +194,7 @@
 									<div class="desc">
 										<!-- Edit content for your specialization -->
 										<h3>Data Science</h3>
-										<p>Machine Learning | NLP | Deep Learning | </p>
+										<p>Machine Learning | IOT | Deep Learning | Python </p>
 									</div>
 								</div>
 							</div>
@@ -209,7 +208,7 @@
 									<div class="desc">
 										<!-- Edit content for your specialization -->
 										<h3>Data Analytics</h3>
-										<p>| Machine Learning | Cloud Computing| Python</p>
+										<p> Power BI | Tableau | Geospatial | SQL | Excel</p>
 									</div>
 								</div>
 							</div>
@@ -391,7 +390,7 @@
 												<div class="panel-body">
 													<p><strong>Christ University, Bangalore | 2023 – 2025</strong></p>
 													<ul>
-														li>Currently pursuing a trimester-based program.</li>
+														<li>Currently pursuing a trimester-based program.</li>
 														<li>Developing advanced skills in machine learning, data analysis, statistical modeling, and big data technologies.</li>
 														<li>Coursework includes AI, predictive analytics, data visualization, cloud computing, and deep learning.</li>
 														<li>Engaged in real-world projects and research work to address complex data-driven challenges.</li>
