--- a/index.html
+++ b/index.html
@@ -156,19 +156,6 @@
 											</div>
 										</a>
 									</div>
-
-									<!-- Remove this div if you don't have account on Kaggle -->
-									<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
-										<a href="https://www.kaggle.com/roshrr10" target="_blank"> <!-- Add your link -->
-											<div class="services color-3">
-												<span class="icon2">
-													<i class="fab fa-kaggle"></i>
-													<h3>Kaggle</h3>
-												</span>
-											</div>
-										</a>
-									</div>
-
 								</div>
 
 							</div>
@@ -194,7 +181,7 @@
 									<div class="desc">
 										<!-- Edit content for your specialization -->
 										<h3>Data Science</h3>
-										<p>Machine Learning | IOT | Deep Learning | Python </p>
+										<p>Machine Learning || IOT || Deep Learning || AI </p>
 									</div>
 								</div>
 							</div>
@@ -208,7 +195,7 @@
 									<div class="desc">
 										<!-- Edit content for your specialization -->
 										<h3>Data Analytics</h3>
-										<p> Power BI | Tableau | Geospatial | SQL | Excel</p>
+										<p> Power BI || Tableau || Geospatial || SQL || Excel || Python </p>
 									</div>
 								</div>
 							</div>
@@ -222,7 +209,7 @@
 									<div class="desc">
 										<!-- Edit content for your specialization -->
 										<h3>Domain Expertise</h3>
-										<p>Healthcare Domain</p>
+										<p>Sports || Healthcare || Finance </p>
 									</div>
 								</div>
 							</div>
@@ -245,11 +232,11 @@
 							<!-- Edit content based on your Skills and percentages -->
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 								<div class="progress-wrap">
-									<h3>C</h3>
+									<h3>Python</h3>
 									<div class="progress">
 										<div class="progress-bar color-1" role="progressbar" aria-valuenow="79"
-											aria-valuemin="0" aria-valuemax="100" style="width:79%">
-											<span>79%</span>
+											aria-valuemin="0" aria-valuemax="100" style="width:90%">
+											<span>90%</span>
 										</div>
 									</div>
 								</div>
@@ -257,7 +244,7 @@
 
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 								<div class="progress-wrap">
-									<h3>C++</h3>
+									<h3>SQL</h3>
 									<div class="progress">
 										<div class="progress-bar color-2" role="progressbar" aria-valuenow="80%"
 											aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -269,11 +256,11 @@
 
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 								<div class="progress-wrap">
-									<h3>Microsoft SQL</h3>
+									<h3>Java</h3>
 									<div class="progress">
 										<div class="progress-bar color-3" role="progressbar" aria-valuenow="85"
-											aria-valuemin="0" aria-valuemax="100" style="width:85%">
-											<span>85%</span>
+											aria-valuemin="0" aria-valuemax="100" style="width:65%">
+											<span>65%</span>
 										</div>
 									</div>
 								</div>
@@ -281,47 +268,11 @@
 
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 								<div class="progress-wrap">
-									<h3>Python</h3>
+									<h3>R</h3>
 									<div class="progress">
 										<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
-											aria-valuemin="0" aria-valuemax="100" style="width:90%">
-											<span>90%</span>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-								<div class="progress-wrap">
-									<h3>Java</h3>
-									<div class="progress">
-										<div class="progress-bar color-5" role="progressbar" aria-valuenow="80"
-											aria-valuemin="0" aria-valuemax="100" style="width:80%">
-											<span>80%</span>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-								<div class="progress-wrap">
-									<h3>R Programming</h3>
-									<div class="progress">
-										<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
-											aria-valuemin="0" aria-valuemax="100" style="width:75%">
-											<span>75%</span>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-								<div class="progress-wrap">
-									<h3>Tableau</h3>
-									<div class="progress">
-										<div class="progress-bar color-2" role="progressbar" aria-valuenow="95"
-											aria-valuemin="0" aria-valuemax="100" style="width:95%">
-											<span>95%</span>
+											aria-valuemin="0" aria-valuemax="100" style="width:60%">
+											<span>60%</span>
 										</div>
 									</div>
 								</div>
@@ -331,9 +282,9 @@
 								<div class="progress-wrap">
 									<h3>Power BI</h3>
 									<div class="progress">
-										<div class="progress-bar color-2" role="progressbar" aria-valuenow="82"
-											aria-valuemin="0" aria-valuemax="100" style="width:82%">
-											<span>82%</span>
+										<div class="progress-bar color-5" role="progressbar" aria-valuenow="80"
+											aria-valuemin="0" aria-valuemax="100" style="width:90%">
+											<span>90%</span>
 										</div>
 									</div>
 								</div>
@@ -341,28 +292,15 @@
 
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 								<div class="progress-wrap">
-									<h3>python</h3>
+									<h3>Tableau</h3>
 									<div class="progress">
-										<div class="progress-bar color-1" role="progressbar" aria-valuenow="35"
-											aria-valuemin="0" aria-valuemax="100" style="width:35%">
-											<span>35%(learning)</span>
+										<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
+											aria-valuemin="0" aria-valuemax="100" style="width:95%">
+											<span>95%</span>
 										</div>
 									</div>
 								</div>
 							</div>
-
-							<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-								<div class="progress-wrap">
-									<h3>ALP</h3>
-									<div class="progress">
-										<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
-											aria-valuemin="0" aria-valuemax="100" style="width:80%">
-											<span>80%</span>
-										</div>
-									</div>
-								</div>
-							</div>
-
 						</div>
 					</div>
 				</section>
@@ -467,17 +405,16 @@
 						<div class="row row-pt-md">
 							<div class="col-md-4 text-center animate-box">
 								<div class="services color-1">
-									<a href="https://github.com/BALASANKARP" target="_blank">
+									<a href="https://github.com/roshrr10" target="_blank">
 										<span class="icon">
 											<i class="icon-github"></i>
 										</span>
 									</a>
 									<div class="desc">
 										<!-- Edit content for your specialization -->
-										<h3>Ukraine Russia War Data Analysis</h3>
-										<p>2022 Ukraine Russia War Exploratory Data Analysis, Analysis was done on the
-											day 167 of the war</p>
-										<p id="project-tool">Tableau | Power BI | Advance Excel | Python</p>
+										<h3>Lakdi: Furniture Selling Web Application</h3>
+										<p>Implemented price prediction using Random Forest and built a recommendation system using CNN (VGG16)</p>
+										<p id="project-tool">Python | Keras| Scikit-learn| Django | PL/SQL</p>
 									</div>
 								</div>
 							</div>
@@ -485,7 +422,7 @@
 							<!-- Remove this div if you have only one specialization -->
 							<div class="col-md-4 text-center animate-box">
 								<div class="services color-2">
-									<a href="https://github.com/BALASANKARP" target="_blank">
+									<a href="https://github.com/roshrr10" target="_blank">
 										<span class="icon">
 											<i class="icon-github"></i>
 										</span>
@@ -503,7 +440,7 @@
 							<!-- Remove this div if you have only two specialization -->
 							<div class="col-md-4 text-center animate-box">
 								<div class="services color-3">
-									<a href="https://github.com/RiyaBM" target="_blank">
+									<a href="https://github.com/roshrr10" target="_blank">
 										<span class="icon">
 											<i class="icon-github"></i>
 										</span>
