--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 										<!-- Edit content for your specialization -->
 										<h3>Lakdi: Furniture Selling Web Application</h3>
 										<p>Implemented price prediction using Random Forest and built a recommendation system using CNN (VGG16)</p>
-										<p id="project-tool">Python | Keras| Scikit-learn| Django | PL/SQL</p>
+										<p id="project-tool"> Python | Keras | Scikit-learn | Django | PostgreSQL </p>
 									</div>
 								</div>
 							</div>
@@ -428,11 +428,9 @@
 										</span>
 									</a>
 									<div class="desc">
-										<!-- Edit content for your specialization -->
-										<h3>Spoilt Food Detection System</h3>
-										<p>Used different varieties of gas sensors to detect spoilt food based on
-											concentration of gases produced by decaying food.</p>
-										<p id="project-tool">IoT | C++ | Arduino</p>
+										<h3>SARAYA - Online Hotel Reservation System</h3>
+										<p>Developed a comprehensive hotel reservation system allowing users to book rooms, view availability, and manage reservations online.</p>
+										<p id="project-tool"> PHP | MySQL | JavaScript | HTML | CSS </p>
 									</div>
 								</div>
 							</div>
@@ -446,15 +444,13 @@
 										</span>
 									</a>
 									<div class="desc">
-										<!-- Edit content for your specialization -->
-										<h3>Wine Type Classification Using XGBoost</h3>
-										<p>This projecr contains comparision of Deep Learning Models which are CNN,
-											ResNet50 and VGG16.</p>
-										<p id="project-tool">Python | XGBoost</p>
+										<h3>Online Turf Management System</h3>
+										<p>Designed an online system to manage turf bookings, allowing users to check availability and reserve slots seamlessly.</p>
+										<p id="project-tool"> HTML | CSS | JavaScript | AngularJS </p>
 									</div>
 								</div>
 							</div>
-
+						</div>
 				</section>
 
 				<!-- Remove this secion if you dont have Internships -->
@@ -477,13 +473,11 @@
 												<i class="fas fa-laptop-code"></i>
 											</div>
 											<!-- Edit content based on your Internships -->
-											<div class="timeline-label" , style="background: #e5edf4;">
-												<h2><a href="#">Brainy Beam Technologies Pvt Ltd</a> <span> </span></h2>
-												<p id="project-tool">[May, 2024 - July, 2024]</p>
-												<p>In this internship I learned Machine Learning models like Linear
-													Regression, KMeans Clustering and Logistic Regression and worked on
-													an E-commerce prediction project.</p>
-												<p id="project-tool">Python | Machine Learning | Pipeline</p>
+											<div class="timeline-label" style="background: #e5edf4;">
+												<h2><a href="#">Christ Academy ICSE School, Bangalore</a> <span> </span></h2>
+												<p id="project-tool">[August 2022 - February 2023]</p>
+												<p>Taught speed math to students from 5th to 8th grade.</p>
+												<p id="project-tool"> Teaching | Mathematics </p>
 											</div>
 										</div>
 									</article>
@@ -494,13 +488,41 @@
 											<div class="timeline-icon color-2">
 												<i class="fas fa-laptop-code"></i>
 											</div>
-											<div class="timeline-label" , style="background: #e5edf4;">
-												<h2><a href="#">Brainy Beam Technologies Pvt Ltd</a> <span> </span></h2>
-												<p id="project-tool">[Oct, 2023 - Jan, 2024]</p>
-												<p>In this internship I learned Machine Learning models like Linear
-													Regression, KMeans Clustering and Logistic Regression and worked on
-													an E-commerce prediction project.</p>
-												<p id="project-tool">Python | Machine Learning | Pipeline</p>
+											<div class="timeline-label" style="background: #e5edf4;">
+												<h2><a href="#">Prodigy Infotech</a> <span> </span></h2>
+												<p id="project-tool">[May 2024 - June 2024]</p>
+												<p>During my internship at Prodigy Infotech, I undertook a range of data analysis and machine learning projects, focusing on data visualization, classification, and sentiment analysis. Key tasks included:</p>
+												<ul>
+													<li><strong>Task 01:</strong> Developed visualizations, such as bar charts and histograms, to examine the distribution of demographic attributes in a population dataset.</li>
+													<li><strong>Task 02:</strong> Conducted comprehensive data cleaning and exploratory data analysis (EDA) on historical datasets, identifying trends and correlations across multiple variables.</li>
+													<li><strong>Task 03:</strong> Built a decision tree classifier to predict customer purchasing behavior based on demographic and behavioral data, enhancing predictive accuracy through model tuning.</li>
+													<li><strong>Task 04:</strong> Analyzed social media sentiment data to gauge public opinion on specific topics and brands, uncovering sentiment patterns and key discussion points.</li>
+													<li><strong>Task 05:</strong> Examined traffic accident data to identify key contributing factors, including road conditions and time of day, and visualized accident hotspots to highlight risk-prone areas.</li>
+												</ul>
+												<p>Successfully completed all tasks and received a completion certificate for my contributions.</p>
+												<p id="project-tool"> Data Analysis | Data Visualization | Machine Learning </p>
+											</div>
+										</div>
+									</article>
+
+									<article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+										<div class="timeline-entry-inner">
+											<div class="timeline-icon color-3">
+												<i class="fas fa-laptop-code"></i>
+											</div>
+											<div class="timeline-label" style="background: #e5edf4;">
+												<h2><a href="#">CodSoft</a> <span> </span></h2>
+												<p id="project-tool">[July 2024 - August 2024]</p>
+												<p>As a Data Science Intern at CodSoft, I undertook multiple data-driven projects that refined my expertise in predictive modeling, classification, and regression analysis. Key projects included:</p>
+												<ul>
+													<li><strong>Project 01:</strong> Developed a predictive model for Titanic passenger survival, utilizing demographic and personal data to assess survival probabilities.</li>
+													<li><strong>Project 02:</strong> Designed a movie rating prediction model by applying regression techniques, leveraging features such as genre and cast to estimate accurate ratings.</li>
+													<li><strong>Project 03:</strong> Constructed a classification model with the Iris dataset to classify flower species based on petal and sepal characteristics.</li>
+													<li><strong>Project 04:</strong> Conducted a sales prediction analysis, applying machine learning algorithms to forecast product sales influenced by advertising spend and audience segmentation.</li>
+													<li><strong>Project 05:</strong> Built a credit card fraud detection model, implementing classification methods to identify fraudulent transactions effectively.</li>
+												</ul>
+												<p>Successfully completed all assigned projects and received a completion certificate for demonstrated skills and contributions.</p>
+												<p id="project-tool">Skills Applied: Data Science | Machine Learning | Predictive Modeling | Classification | Regression Analysis</p>
 											</div>
 										</div>
 									</article>
@@ -539,10 +561,9 @@
 											</div>
 											<!-- Edit content based on your Certifications -->
 											<div class="timeline-label">
-												<h2><a href="#">Tableau, Power BI, SQL, MongoDB</a> <span> </span></h2>
-												<p id="project-tool">~ from Coursera [IIT Madras]</p>
-												<p>Certifed by learnbay online learning platform for using data
-													visualization tools and handling data with SQL and NoSQL skills.</p>
+												<h2><a href="#">Android App Development</a> <span></span></h2>
+												<p id="project-tool">~ from MyCaptain</p>
+												<p>Learned the fundamentals of Android app development, including user interface design, data storage, and app lifecycle management. Developed a fully functional app as part of the course project.</p>
 											</div>
 										</div>
 									</article>
@@ -554,9 +575,9 @@
 												<i class="icon-pen2"></i>
 											</div>
 											<div class="timeline-label">
-												<h2><a href="#">Python Programming</a> <span></span></h2>
-												<p id="project-tool">~ from Infosys Springboard</p>
-												<p>Have been certifed for python language at intermidiate level</p>
+												<h2><a href="#">Data Analytics with Python</a> <span></span></h2>
+												<p id="project-tool">~ from MyCaptain</p>
+												<p>Gained hands-on experience in data analytics using Python, covering data cleaning, manipulation, and visualization to aid in effective decision-making.</p>
 											</div>
 										</div>
 									</article>
@@ -568,10 +589,37 @@
 												<i class="icon-pen2"></i>
 											</div>
 											<div class="timeline-label">
-												<h2><a href="#">Introduction to AI and NLP</a> <span></span></h2>
-												<p id="project-tool">~ from Google | Microsoft</p>
-												<p>Infosys Springboard has been best opensource platform to get my
-													fundamentals developed in field of Artificial Intelligence</p>
+												<h2><a href="#">Introduction to Artificial Intelligence</a> <span></span></h2>
+												<p id="project-tool">~ from Coursera</p>
+												<p>Acquired foundational knowledge in artificial intelligence, including algorithms and ethical considerations, with a focus on machine learning models and their applications.</p>
+											</div>
+										</div>
+									</article>
+
+									<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+										<div class="timeline-entry-inner">
+
+											<div class="timeline-icon color-4">
+												<i class="icon-pen2"></i>
+											</div>
+											<div class="timeline-label">
+												<h2><a href="#">Python Programming</a> <span></span></h2>
+												<p id="project-tool">~ from MyCaptain</p>
+												<p>Certified in Python programming, mastering core concepts such as data structures, control flow, and functions, preparing for more advanced programming challenges.</p>
+											</div>
+										</div>
+									</article>
+
+									<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+										<div class="timeline-entry-inner">
+
+											<div class="timeline-icon color-5">
+												<i class="icon-pen2"></i>
+											</div>
+											<div class="timeline-label">
+												<h2><a href="#">The Data Scientist Toolbox</a> <span></span></h2>
+												<p id="project-tool">~ from Coursera</p>
+												<p>Completed a course covering essential data science tools and methodologies, learning about data wrangling, version control, and project organization essential for data science workflows.</p>
 											</div>
 										</div>
 									</article>
