--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 											<h2 class="colorlib-heading">About Me</h2>
 											<!-- Change content of paragraph tag -->
 											<p>
-												<font size="3.5"><strong>I am Roshan Raju<strong>, a passionate data enthusiast based in Bangalore, India, dedicated to unraveling complex challenges through innovative problem-solving and hands-on projects.
+												<font size="3.5"><strong>I am Roshan Raju</strong>, a passionate data enthusiast based in Bangalore, India, dedicated to unraveling complex challenges through innovative problem-solving and hands-on projects.
 												I hold a Bachelor of Science in Computer Science, Mathematics, and Statistics from Christ Academy Institute for Advanced Studies.
 												Currently, I am pursuing my Master of Science in Data Science at Christ University, where I am engaged in a comprehensive trimester-based program.
 												This advanced education enables me to deepen my expertise in data analysis, machine learning, and statistical modeling, preparing me to address complex challenges in the rapidly evolving field of Data Science.
